basic-v2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: basicpod
  labels:
    type: webserver
spec:
  volumes:
    - name: weblog-pv-storage
      persistentVolumeClaim:
        claimName: weblog-pv-claim
  containers:
  - name: webcont
    image: nginx
    ports:
    - containerPort: 80
    volumeMounts:
      - mountPath: "/var/log/nginx/"
        name: weblog-pv-storage
  - name: fdlogger
    image: fluent/fluentd
    volumeMounts:
      - mountPath: "/var/log"
        name: weblog-pv-storage
