pod-nginx2.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx2
spec:
  containers:
  - image: nginx
    name: nginx
    volumeMounts:
    - name: myvol
      mountPath: "/etc/lala"
      readOnly: true
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  volumes:
  - name: myvol
    configMap:
      name: mycm
status: {}
