pod-nginx4.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
spec:
  serviceAccountName: mysa
  containers:
  - image: nginx
    name: nginx3
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
