pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: busybox
  name: busybox
spec:
  containers:
  - args:
    - /bin/sh
    - -c
    - sleep 3600
    image: busybox
    name: busybox
    resources: {}
    volumeMounts:
    - name: my-volume
      mountPath: /etc/foo
  volumes:
    - name: my-volume
      persistentVolumeClaim:
        claimName: mypvc
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
