simpleapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2022-12-06T11:06:38Z"
  generation: 2
  labels:
    app: try1
  name: try1
  namespace: formation-ns-dev
  resourceVersion: "105575"
  uid: 4d69bf83-2bbd-4ad5-ac38-939acbddaf0d
spec:
  progressDeadlineSeconds: 600
  replicas: 6
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: try1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: try1
    spec:
      containers:
      - image: python-kube-exo-app
        imagePullPolicy: Never
        name: python-kube-exo-app
        readinessProbe:
          periodSeconds: 5
          exec:
            command:
            - cat
            - /tmp/healthy
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30

status:
  conditions:
  - lastTransitionTime: "2022-12-06T11:06:38Z"
    lastUpdateTime: "2022-12-06T11:06:38Z"
    message: Deployment does not have minimum availability.
    reason: MinimumReplicasUnavailable
    status: "False"
    type: Available
  - lastTransitionTime: "2022-12-06T11:06:38Z"
    lastUpdateTime: "2022-12-06T11:06:58Z"
    message: ReplicaSet "try1-6cd5cdd899" is progressing.
    reason: ReplicaSetUpdated
    status: "True"
    type: Progressing
  observedGeneration: 2
  replicas: 6
  unavailableReplicas: 6
  updatedReplicas: 6
