newservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: secondapp
spec:
  ports:
  - port: 80
    protocol: TCP
    nodePort: 32000
  type: LoadBalancer
  selector:
    example: second
  sessionAffinity: None
status:
  loadBalancer: {}
